<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="share_message">Привет! Пройди курс по Android-разработке https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="support_email">slava.kalkaev@mail.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agree_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_title">Поделиться через</string>
    <string name="support_title">Написать в поддержку</string>
    <string name="agreement_title">Открыть пользовательское соглашение</string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="conn_problem">Проблемы со связью</string>
    <string name="loading_fail">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="history_search">История поиска</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="artwork">Обложка</string>
    </resources>
