<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="14dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:fontFamily="@font/ys_display_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_main"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:paddingBottom="28dp">

        <Button
            android:text="@string/search"
            app:icon="@drawable/icon_search"
            android:id="@+id/search_button"
            style="@style/ButtonMainScreenStyle"/>

        <Button
            android:text="@string/library"
            app:icon="@drawable/media"
            android:id="@+id/media_button"
            style="@style/ButtonMainScreenStyle"
            />

        <Button
            android:text="@string/settings"
            app:icon="@drawable/option"
            android:id="@+id/settings_button"
            style="@style/ButtonMainScreenStyle"/>

    </LinearLayout>

</LinearLayout>
