<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_screen_background"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="14dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/search_back"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginTop="14dp"
            android:src="@drawable/arrow"
            app:tint="@color/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search"
            android:textColor="@color/text_color"
            android:textSize="22sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/search"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="36dp"
            android:singleLine="true"
            android:textColor="@color/search_view_text"
            android:textColorHint="@color/search_view_hint"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp"

            />

        <ImageView
            android:id="@+id/search_text"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="left"
            android:layout_marginStart="13dp"
            android:layout_marginTop="11dp"
            android:src="@drawable/search_icon" />

        <ImageButton
            android:id="@+id/clear_button"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="14dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/clear"
            android:visibility="gone" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        tools:listitem="@layout/track_view" />

    <LinearLayout
        android:id="@+id/layoutPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imagePlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp" />

        <TextView
            android:id="@+id/textPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/ys_display_medium"
            android:textAlignment="center"
            android:textColor="@color/view_text_placeholder"
            android:textSize="19sp"
            tools:text="@string/no_results" />

        <Button
            android:id="@+id/btnReload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/reload"
            android:textAllCaps="false"
            android:textColor="@color/button_text_placeholder"
            android:textSize="14sp"
            android:visibility="gone"
            app:backgroundTint="@color/button_background_placeholder"
            app:cornerRadius="54dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/history_search"
            android:textColor="@color/view_text_placeholder"
            android:textSize="19sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyTrackList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <Button
            android:id="@+id/btnClearHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:backgroundTint="@color/button_background_placeholder"
            android:fontFamily="@font/ys_display_medium"
            android:inputType="textCapSentences"
            android:text="@string/clear_history"
            android:textColor="@color/button_text_placeholder"
            android:textSize="14sp"
            app:cornerRadius="54dp"
            tools:ignore="TextViewEdits" />

    </LinearLayout>

</LinearLayout>


